# tilp_and_gfm

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  vcpkg.json
gfm/trunk/: AUTHORS  CMakeLists.txt  ChangeLog  GFM.lsm  GFM.lsm.in  GFM.spec  GFM.spec.in  INFO  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  gfm.pro  install.bat
gfm/trunk/debian/: changelog  control  copyright  gfm.docs  gfm.menu  rules
gfm/trunk/desktop/: Makefile.am  Makefile.in  README.txt  gfm.appdata.xml  gfm.desktop.in
gfm/trunk/glade/: Makefile.am  Makefile.in  copy.bat  dialogs.glade  dialogs.gladep  dialogs.str  gfm.glade  gfm.gladep  gfm.str  options.glade  options.gladep  options.str  pbars.glade  pbars.str  release.glade
gfm/trunk/help/: Makefile.am  Makefile.in
gfm/trunk/icons/: ListOfTypes.txt  Makefile.am  Makefile.in  Thumbs.db  copy.bat
gfm/trunk/intl/: Makefile
gfm/trunk/man/: Makefile.am  Makefile.in  Manpage.txt  cleaner.c  gfm.1
gfm/trunk/pixmaps/: Makefile.am  Makefile.in  attr_locked.xpm  attr_none.xpm  copy.bat  gfm.xpm
gfm/trunk/po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  TRANSLATORS  copy.bat  de.po  fr.po  gfm.pot
gfm/trunk/src/: Makefile.am  Makefile.in  cmdline.c  cmdline.h  config.c  config.h  configfile.c  configfile.h  ctree.c  ctree.h  dialog.c  dialog.h  dialogs.glade  drag_drop.c  drag_drop.h  file.c  file.h  filesel.c  filesel.h  folder_tree.c  folder_tree.h  ftree_menu.c  ftree_menu.h  ftree_sort.c  gfm.h  group_file.c  group_file.h  group_tree.c  group_tree.h  groups.c  groups.h  gtree_menu.c  gtree_menu.h  gui.c  gui.h  kde.h  labels.c  labels.h  main.c  menu.c  (+16 more)
tilp/branches/tilp-1/desktop/: Makefile.am  Makefile.in
tilp/branches/tilp-2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.win32  RELEASE  TODO  aclocal.m4  configure  configure.ac
tilp/branches/tilp-2/glade/: Makefile.in  about-2.glade  about-2.str  action-2.str  clist_rbm-2.str  clock-2.glade  clock-2.str  copy.bat  tilp-2.str  (+14 more)
tilp/tags/6.68/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.freebsd  aclocal.m4  config.h.in  configure  configure.in
tilp/tags/6.72/: ChangeLog  Makefile.am  README.linux  configure  configure.in
tilp/trunk/: .FBCIndex  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.freebsd  README.linux  README.win32  RELEASE  THANKS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  install.bat  tilp-2.pro  tilp.pro
tilp/trunk/.xvpics/: ready.tiff
tilp/trunk/builder/: Makefile.am  Makefile.in  README  action.ui  backupdbox.ui  clist_rbm.ui  clock.ui  ctree_rbm.ui  device.ui  entrydbox.ui  manpage.ui  options.ui  pbar1.ui  pbar2.ui  pbar3.ui  pbar4.ui  pbar5.ui  release.ui  screenopts.ui  screenshot.ui  tilp.ui
tilp/trunk/debian/: changelog  control  copyright  rules  tilp.docs  tilp.menu  tilp2.README.Debian  tilp2.doc-base  tilp2.menu
tilp/trunk/desktop/: Makefile  Makefile.am  Makefile.in  README.txt  tilp.appdata.xml  tilp.desktop.in  tilp.xml
tilp/trunk/glade/: Makefile.am  Makefile.in  README  about-2.glade  about-2.str  action-2.glade  action-2.gladep  action-2.str  clist_rbm-2.glade  clist_rbm-2.str  clock-2.glade  clock-2.gladep  clock-2.str  comm-2.glade  comm-2.gladep  comm-2.str  copy.bat  ctree_rbm-2.glade  ctree_rbm-2.gladep  ctree_rbm-2.str  device-2.glade  device-2.str  extprgms-2.glade  extprgms-2.gladep  extprgms-2.str  general-2.glade  general-2.gladep  general-2.str  logfile-2.glade  logfile-2.gladep  logfile-2.str  manpage-2.glade  manpage-2.str  options-2.glade  options-2.gladep  options-2.str  pbars-2.glade  pbars-2.gladep  pbars-2.str  release-2.glade  (+16 more)
tilp/trunk/help/: FAQ.html  Makefile.am  Makefile.in  Manual_en.html  User_Manual.html  chapter01.html  chapter02.html  chapter03.html  chapter04.html  chapter05.html  chapter06.html  chapter07.html  chapter20.html  chapter21.html  chapter22.html  usb_driver.html
tilp/trunk/icons/: COPYRIGHT  ListOfTypes.txt  Makefile  Makefile.am  Makefile.in  copy.bat
tilp/trunk/intl/: plural.c
tilp/trunk/man/: Makefile.am  Makefile.in  Manpage.txt  cleaner.c  dos2unix.c  tilp-2.1  tilp.1
tilp/trunk/mfc/: dlgclock.h  leftdoc.cpp  leftview.cpp  prgmspg2.cpp  readme.txt  screenpg1.h  tilp.aps
tilp/trunk/misc/: Makefile.am  Makefile.in
tilp/trunk/osx/: BoxesController.h  BoxesController.m  Calc89KeyboardController.h  Calc89KeyboardController.m  Calc92KeyboardController.h  Calc92KeyboardController.m  CalcKeyboardController.h  CalcKeyboardController.m  ChangeLog  ClockController.h  ClockController.m  Credits.rtf  ImageAndTextCell.h  ImageAndTextCell.m  MenuController.h  MenuController.m  NSArray_Extensions.h  NSArray_Extensions.m  PrefsController.h  PrefsController.m  RCTextView.h  RCTextView.m  SheetsController.h  SheetsController.m  SimpleTreeNode.h  SimpleTreeNode.m  SkinController.h  SkinController.m  TODO.rtf  Thanks.rtf  TiKeyboardView.h  TiKeyboardView.m  TiLP.pmsp  TilpController.h  TilpController.m  ToolbarController.h  ToolbarController.m  TransfersController.h  TransfersController.m  TreeNode.h  (+17 more)
tilp/trunk/pixmaps/: Makefile.am  Makefile.in  attr_locked.xpm  clist_dotdot.xpm  clist_up.xpm  copy.bat  mini_screen.xpm  tb_calc_send.xpm  tb_help.xpm  tb_refresh.xpm  tb_trash.xpm  tilp.xpm  yes.xpm
tilp/trunk/plugins/: Makefile.in
tilp/trunk/po/: LINGUAS  Makefile.in.in  POTFILES.in  TRANSLATORS  copy.bat  de.po  fr.po  tilp.pot  tilp2.pot
tilp/trunk/registry/: Makefile.am  Makefile.in
tilp/trunk/src/: Makefile.am  Makefile.in  about.c  about.h  action.c  action.h  bookmark.c  bookmark.h  cb_calc.c  cb_calc.h  cb_misc.c  cb_misc.h  cb_screen.c  cl_inc.h  cl_indep.c  cl_indep.h  cl_refresh.c  cl_refresh.h  clist.c  clist.h  clist_rbm.c  clist_rbm.h  clock.c  clock.h  cmdinterface.c  comm.c  comm.c.old  conv83.h  conv85.h  conv86.h  conv_inc.h  ctree.c  ctree.h  ctree_rbm.c  ctree_rbm.h  dboxes.c  dboxes.h  defs.h  device.c  device.h  (+167 more)
tilp/trunk/wicons/: Makefile.am  Makefile.in  README
tilp/trunk/win32/: Makefile.in
(+879 files in other folders)
